--- a/.classpath
+++ b/.classpath
@@ -2,46 +2,45 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/antlr-2.7.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/antlr-runtime-3.3.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/avalon-framework-api-4.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/avalon-framework-impl-4.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-anim-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-awt-util-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-bridge-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-css-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-dom-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-ext-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-extension-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-gvt-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-js-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-parser-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-script-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-svg-dom-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-svggen-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-transcoder-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-util-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/batik-xml-1.7.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/commons-codec-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/commons-io-1.3.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/commons-lang-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/commons-logging-1.1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/fop-1.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/jaxb-svg11-1.0.2.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/jaxb-xmldsig-core-1.0.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/jaxb-xslfo-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/log4j-1.2.17.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/poi-3.8.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/poi-scratchpad-3.8.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/serializer-2.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/slf4j-api-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/slf4j-log4j12-1.7.5.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/stringtemplate-3.2.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/wmf2svg-0.9.0.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/xalan-2.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/dependencies/xmlgraphics-commons-1.5.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/docx4j-3.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/docx4j-3.0.1/docxkit.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/Java/JTattoo-1.6.10.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/antlr-runtime-3.3.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/avalon-framework-api-4.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/avalon-framework-impl-4.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-anim-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-awt-util-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-bridge-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-css-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-dom-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-ext-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-extension-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-gvt-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-js-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-parser-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-script-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-svg-dom-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-svggen-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-transcoder-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-util-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/batik-xml-1.7.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/commons-io-1.3.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/commons-lang-2.4.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/fop-1.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/jaxb-svg11-1.0.2.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/jaxb-xmldsig-core-1.0.0.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/jaxb-xslfo-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/poi-3.8.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/poi-scratchpad-3.8.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/serializer-2.7.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/stringtemplate-3.2.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/wmf2svg-0.9.0.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/xalan-2.7.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/dependencies/xmlgraphics-commons-1.5.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/docx4j-3.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/leemcdonald/Documents/Team Project/Dependencies/Docx4j/docxkit.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
